[gd_scene load_steps=14 format=3 uid="uid://mu50rnecafq7"]

[ext_resource type="Script" uid="uid://bjuva7l14y5ml" path="res://scirpts/main.gd" id="1_1j6d1"]
[ext_resource type="PackedScene" uid="uid://bsrphuurxcwjy" path="res://scenes/thief.tscn" id="2_mqxhw"]
[ext_resource type="Script" uid="uid://b3liuoddvd5ve" path="res://scirpts/hud.gd" id="3_3dblt"]
[ext_resource type="FontFile" uid="uid://1h5vd3h4d4xg" path="res://assets/fonts/PixelifySans-VariableFont_wght.ttf" id="4_blwv4"]
[ext_resource type="PackedScene" uid="uid://ntfugx7a0r0e" path="res://scenes/floors/level1.tscn" id="5_nfa5d"]
[ext_resource type="Script" uid="uid://pwleigi8p2n4" path="res://scirpts/elavator.gd" id="6_3dblt"]
[ext_resource type="AudioStream" uid="uid://judl8y3jm0h4" path="res://audio/cash-register-kaching-sound-effect-125042-Trimmed by FlexClip.mp3" id="7_choun"]
[ext_resource type="Shader" uid="uid://c3xmyymar5ul5" path="res://shaders/warning.gdshader" id="7_o6xl0"]
[ext_resource type="Shader" uid="uid://cbh8ag6rmrn5b" path="res://shaders/change_scene.gdshader" id="8_85g3d"]
[ext_resource type="Script" uid="uid://cbf7jdiuyy0r3" path="res://scirpts/scene_transition.gd" id="9_choun"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_blwv4"]
size = Vector2(282, 336)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tipki"]
shader = ExtResource("7_o6xl0")
shader_parameter/intensity = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ya4ey"]
shader = ExtResource("8_85g3d")
shader_parameter/progress = 0.0
shader_parameter/bg_color = Color(0, 0, 0, 1)
shader_parameter/edge_softness = 0.05

[node name="Main" type="Node2D"]
script = ExtResource("1_1j6d1")

[node name="Floors" type="Node2D" parent="."]

[node name="Floor1" parent="Floors" instance=ExtResource("5_nfa5d")]

[node name="Elavator" type="Area2D" parent="."]
position = Vector2(116, 421)
script = ExtResource("6_3dblt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Elavator"]
position = Vector2(3990, -149)
shape = SubResource("RectangleShape2D_blwv4")

[node name="Thief" parent="." instance=ExtResource("2_mqxhw")]
position = Vector2(3822, 305)

[node name="Camera2D" type="Camera2D" parent="Thief"]
position = Vector2(-43, 118)
limit_left = 0
limit_top = 0
limit_right = 4320
limit_bottom = 440
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("3_3dblt")

[node name="Panel" type="Panel" parent="HUD"]
offset_left = 11.0
offset_top = 14.0
offset_right = 139.0
offset_bottom = 67.0

[node name="Dollor_sign" type="Label" parent="HUD"]
offset_left = 15.0
offset_top = 22.0
offset_right = 55.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("4_blwv4")
theme_override_font_sizes/font_size = 30
text = "$"

[node name="Money" type="Label" parent="HUD"]
offset_left = 35.0
offset_top = 22.0
offset_right = 53.0
offset_bottom = 59.0
theme_override_fonts/font = ExtResource("4_blwv4")
theme_override_font_sizes/font_size = 30
text = "0"

[node name="Hint" type="Label" parent="HUD"]
offset_left = 458.0
offset_top = 352.0
offset_right = 546.0
offset_bottom = 432.0
theme_override_fonts/font = ExtResource("4_blwv4")
theme_override_font_sizes/font_size = 66
text = "[E]"

[node name="CashSound" type="AudioStreamPlayer" parent="HUD"]
stream = ExtResource("7_choun")
volume_db = -20.0

[node name="DarkLight" type="DirectionalLight2D" parent="."]
position = Vector2(-1, 0)
color = Color(0, 0, 0, 1)
energy = 0.9
blend_mode = 2

[node name="Warning" type="CanvasLayer" parent="."]

[node name="RedOverlay" type="ColorRect" parent="Warning"]
material = SubResource("ShaderMaterial_tipki")
offset_top = 3.0
offset_right = 1030.0
offset_bottom = 440.0
color = Color(0.580392, 0, 0.145098, 0)

[node name="Transition" type="CanvasLayer" parent="."]

[node name="ChangeScene" type="ColorRect" parent="Transition"]
material = SubResource("ShaderMaterial_ya4ey")
offset_right = 1028.0
offset_bottom = 437.0
color = Color(1, 1, 1, 0)
script = ExtResource("9_choun")

[connection signal="money_collected" from="Floors/Floor1" to="HUD" method="_on_money_collected"]
[connection signal="body_entered" from="Elavator" to="Elavator" method="_on_body_entered"]
[connection signal="body_exited" from="Elavator" to="Elavator" method="_on_body_exited"]
[connection signal="go_up" from="Elavator" to="." method="_on_elavator_go_up"]
